tests/124_order_compare_non_number_error.scj
// Test 124: non-number order compare should error at runtime
println(true < false)
// ExpectError: attempt to compare
